# tfgDance

./: README.md
catkinWS/src/dance/: CMakeLists.txt  package.xml
catkinWS/src/dance/launch/: alz_dance_ability.launch
catkinWS/src/dance/src/: CMakeLists.txt  RealTimePeakDetector.cpp  RealTimePeakDetector.hpp  beat_pub.cpp  beat_pub.hpp  beat_tracker.cpp  dance_save.dnc  dance_steps_publisher.cpp  freq_estimator.cpp  freq_estimator.hpp  music_period_estimator.cpp  onsetEnvelope.ck  onsetStrength.ck  onsetStrength_node.cpp  osc_float_receiver.cpp  osc_float_receiver.hpp  steps_file_reader.cpp  steps_file_reader.h
